--- a/app/src/main/res/xml/qianghongbao_service_config.xml
+++ b/app/src/main/res/xml/qianghongbao_service_config.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/accessibility_description"
     android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged|typeWindowContentChanged|typeWindowsChanged"
-    android:packageNames="com.tencent.mm,com.tencent.mobileqq"
+    android:packageNames="com.tencent.mm"
     android:accessibilityFeedbackType="feedbackGeneric"
     android:notificationTimeout="100"
     android:accessibilityFlags="flagDefault"
