--- a/app/src/main/res/xml/base_services_config.xml
+++ b/app/src/main/res/xml/base_services_config.xml
@@ -6,4 +6,4 @@
     android:canRetrieveWindowContent="true"
     android:description="@string/base_accessibility_description"
     android:notificationTimeout="100"
-    android:packageNames="com.tencent.mobileqq,com.android.packageinstaller" />
+    android:packageNames="com.tencent.mm,com.android.packageinstaller" />
