--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -6,9 +6,13 @@
          ?android:attr/buttonBarStyle is new as of API 11 so this is
          necessary to support previous API levels.
   -->
-  <declare-styleable name="ButtonBarContainerTheme">
-    <attr name="metaButtonBarStyle" format="reference" />
-    <attr name="metaButtonBarButtonStyle" format="reference" />
-  </declare-styleable>
-
+    <declare-styleable name="ButtonBarContainerTheme">
+        <attr name="metaButtonBarStyle" format="reference" />
+        <attr name="metaButtonBarButtonStyle" format="reference" />
+    </declare-styleable>
+    <declare-styleable name="RefreshView">
+        <attr name="type" format="enum">
+            <enum name="sun" value="0" />
+        </attr>
+    </declare-styleable>
 </resources>
