--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,15 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="control_background">#cc4285f4</color>
+    <color name="comui_tab_text_color">#ff333333</color>
+    <color name="tab_text_normal">#212121</color>
+
+    <color name="saffron">#F4B63E</color>
+    <color name="eggplant">#663D4E</color>
+    <color name="sienna">#EB6460</color>
+
+    <!--<color name="colorPrimary">#303030</color>-->
+    <!--<color name="colorPrimaryDark">#303030</color>-->
+    <!--<color name="colorAccent">#8661C1</color>-->
+
 </resources>
