--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,6 +18,9 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="comui_tab_text_marginBottom">4.0dip</dimen>
+    <dimen name="list_item_height">222dp</dimen>
+
     <!-- Define standard dimensions to comply with Holo-style grids and rhythm. -->
 
     <dimen name="margin_tiny">4dp</dimen>
