--- a/app/src/main/res/layout/tab2.xml
+++ b/app/src/main/res/layout/tab2.xml
@@ -8,46 +8,80 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="选择的动画类型"
+        android:text="消息测试"
         android:layout_marginBottom="10dp"
         android:textSize="19sp"
         android:id="@+id/textView"/>
 
-    <RadioGroup
-        android:id="@+id/radioGroup"
+    <LinearLayout
+        android:orientation="horizontal"
         android:layout_width="match_parent"
-        android:orientation="vertical"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_height="wrap_content">
 
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="缩放"
-            android:checked="true"
-            android:id="@+id/radioButton1"/>
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="缩放2"
-            android:checked="true"
-            android:id="@+id/radioButton2"/>
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="跳跃"
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@null"
 
+            android:scaleType="fitXY"
+            android:src="@drawable/minus_50"
+            android:id="@+id/imageButton1"/>
 
-            android:id="@+id/radioButton3"/>
-        <RadioButton
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:background="@null"
+            android:scaleType="fitXY"
+            android:layout_marginLeft="20dp"
+            android:src="@drawable/plus_50"
+            android:id="@+id/imageButton2"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:layout_height="wrap_content">
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="翻转"
-            android:id="@+id/radioButton4"/>
-        <RadioButton
+
+            android:text="当前的消息个数为:"
+            android:textSize="15sp"
+            />
+
+        <EditText
+            android:id="@+id/et_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="旋转"
-            android:id="@+id/radioButton5"/>
-    </RadioGroup>
+            android:textSize="15sp"
+            android:textColor="#f00"
+            android:text="50"
 
+            android:inputType="number"
+            android:layout_marginLeft="20dp"
+            />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="显示文字"
+        android:id="@+id/button1"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="显示圆点"
+        android:id="@+id/button2"/>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="隐藏徽章"
+        android:id="@+id/button3"/>
 </LinearLayout>
