--- a/app/src/main/res/layout/tab3.xml
+++ b/app/src/main/res/layout/tab3.xml
@@ -5,66 +5,49 @@
               android:orientation="vertical"
               android:layout_height="match_parent">
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="选择的动画类型"
+        android:layout_marginBottom="10dp"
+        android:textSize="19sp"
+        android:id="@+id/textView"/>
 
-        <TextView
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:layout_height="wrap_content">
+
+        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="是否禁用页面滑动动画"
-            android:gravity="center"
-            android:layout_margin="10dp"
-           />
-
-        <RadioGroup
-            android:id="@+id/radioGroup1"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="打开"
-
-                android:id="@+id/radioButton1"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="关闭"
-                android:id="@+id/radioButton2"/>
-        </RadioGroup>
-
-
-
-        <TextView
+            android:text="缩放"
+            android:checked="true"
+            android:id="@+id/radioButton1"/>
+        <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="是否禁用图标和标题渐变"
-            android:gravity="center"
-            android:layout_margin="10dp"
-            android:id="@+id/textView2"/>
+            android:text="缩放2"
+            android:checked="true"
+            android:id="@+id/radioButton2"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="跳跃"
 
-        <RadioGroup
-            android:id="@+id/radioGroup2"
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:layout_height="wrap_content">
 
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="打开"
-                android:id="@+id/radioButton3"/>
-
-            <RadioButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="关闭"
-                android:id="@+id/radioButton4"/>
-        </RadioGroup>
-
+            android:id="@+id/radioButton3"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="翻转"
+            android:id="@+id/radioButton4"/>
+        <RadioButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="旋转"
+            android:id="@+id/radioButton5"/>
+    </RadioGroup>
 
 </LinearLayout>
