--- a/app/src/main/res/xml/service_config.xml
+++ b/app/src/main/res/xml/service_config.xml
@@ -2,9 +2,9 @@
 <accessibility-service
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:description="@string/accessibility_description"
-    android:accessibilityEventTypes="typeNotificationStateChanged|typeWindowStateChanged|typeWindowContentChanged|typeWindowsChanged"
-    android:packageNames="com.tencent.mm"
-    android:accessibilityFeedbackType="feedbackGeneric"
-    android:notificationTimeout="100"
+    android:accessibilityEventTypes="typeAllMask|typeNotificationStateChanged|typeWindowStateChanged|typeWindowContentChanged|typeWindowsChanged"
+    android:packageNames="com.tencent.mm,com.android.packageinstaller"
+    android:accessibilityFeedbackType="feedbackGeneric|feedbackSpoken|feedbackAudible"
+    android:notificationTimeout="1000"
     android:accessibilityFlags="flagDefault"
     android:canRetrieveWindowContent="true"/>
