--- a/app/src/main/res/xml/wechat_settings.xml
+++ b/app/src/main/res/xml/wechat_settings.xml
@@ -1,7 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <PreferenceCategory android:title="微信红包设置">
+    <PreferenceCategory android:title="开启微信抢红包设置">
+
+        <com.deeplearning.app.widget.CustomSwitchPreference
+            android:defaultValue="true"
+            android:title="微信"
+            android:icon="@drawable/settings_ic_wechat"
+            android:key="KEY_ENABLE_WECHAT"/>
+
+        <com.deeplearning.app.widget.CustomSwitchPreference
+            android:key="KEY_NOTIFY_SOUND"
+            android:title="声音"
+            android:defaultValue="true"/>
+
+        <com.deeplearning.app.widget.CustomSwitchPreference
+            android:key="KEY_NOTIFY_VIBRATE"
+            android:title="震动"
+            android:defaultValue="true"/>
+
+        <com.deeplearning.app.widget.CustomSwitchPreference
+            android:key="KEY_NOTIFY_NIGHT_ENABLE"
+            android:title="夜间免打扰设置"
+            android:summary="23:00-07:00"
+            android:defaultValue="true"/>
 
         <ListPreference
             android:title="抢红包模式"
@@ -37,7 +59,6 @@
             android:dialogTitle="设置打开红包后要执行的事件"
             android:entries="@array/wechat_after_get_settings_titles"
             android:entryValues="@array/wechat_after_get_settings_values"/>
-
     </PreferenceCategory>
 
 </PreferenceScreen>
